stryker/Metadata/unpackaged/objects/Time_Table__c.object
<CustomObject>
    <fields>
        <fullName>Class_time__c</fullName>
        <label>Class time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Faculty_Name__c</fullName>
        <label>Faculty Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s_no__c</fullName>
        <displayFormat>s-{0000}</displayFormat>
        <label>s.no</label>
        <type>AutoNumber</type>
    </fields>
    <label>Time Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S.no-{0000}</displayFormat>
        <label>Time Table</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time_Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>